# cognitive-core

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ANALYSIS.md  AUDIT_REPORT.md  AUDIT_REPORT_FULL.md  BRAIN.md  CC-TODO.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FUTURE_TODO.md  LOG_PLAN.md  PLAN_CC.md  README.md  TODO.md  TODO_DOCS.md  TODO_DOCS_UPDATE.md  TODO_LEARNING_INTEGRATION.md  TODO_LOG_INTEGRATION.md  TODO_P0.md  TODO_P1a.md  TODO_P1b.md  TODO_P1c.md  TODO_PHASE_A.md  TODO_PHASE_B.md  TODO_REPO_FINAL.md  TODO_STAGE_E.md  TODO_STAGE_F.md  TODO_STAGE_FPLUS.md  TODO_STAGE_F_CHECKLIST.md  TODO_STAGE_G.md  TODO_STAGE_M.md  check_db.py  check_deps.py  claude.md  codecov.yml  download_libraries.bat  (+10 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
brain/: __init__.py  cli.py
brain/bridges/: __init__.py  llm_bridge.py  llm_budget.py  safety_wrapper.py
brain/cognition/: __init__.py  action_selector.py  cognitive_core.py  context.py  contradiction_detector.py  goal_manager.py  hypothesis_engine.py  pipeline.py  planner.py  policy_layer.py  reasoner.py  retrieval_adapter.py  salience_engine.py  uncertainty_monitor.py
brain/core/: __init__.py  attention_controller.py  contracts.py  event_bus.py  events.py  hash_utils.py  resource_monitor.py  scheduler.py  text_utils.py
brain/encoders/: __init__.py  audio_encoder.py  encoder_router.py  temporal_encoder.py  text_encoder.py  vision_encoder.py
brain/fusion/: __init__.py  confidence_calibrator.py  cross_modal_contradiction_detector.py  entity_linker.py  shared_space_projector.py
brain/learning/: __init__.py  knowledge_gap_detector.py  online_learner.py  replay_engine.py
brain/logging/: __init__.py  brain_logger.py  digest_generator.py  reasoning_tracer.py  trace_builder.py
brain/memory/: __init__.py  claim_store.py  conflict_guard.py  consolidation_engine.py  episodic_memory.py  material_registry.py  memory_manager.py  migrate.py  procedural_memory.py  semantic_memory.py  source_memory.py  storage.py  working_memory.py
brain/motivation/: __init__.py  curiosity_engine.py  idle_dispatcher.py  motivation_engine.py  reward_engine.py
brain/output/: __init__.py  dialogue_responder.py  response_validator.py  trace_builder.py
brain/perception/: __init__.py  audio_ingestor.py  file_watcher.py  input_router.py  material_ingestor.py  metadata_extractor.py  text_ingestor.py  validators.py  vision_ingestor.py
brain/safety/: __init__.py  audit_logger.py  boundary_guard.py  conflict_detector.py  policy_layer.py  source_trust.py
docs/: ACTION_PLAN.md  ARCHITECTURE.md  AUDIT_FULL.md  BRAIN.md  DAILY_REPORT_2026-03-21.md  PLANS.md  README.md  TODO.md  cognitive_core_mvp_roadmap_revised.md  commands.md  development.md  index.md  review.md
docs/adr/: ADR-001-sqlite-as-default-backend.md  ADR-002-threading-rlock-for-memory.md  ADR-003-protocol-types-for-di.md  ADR-004-bm25-hybrid-retrieval.md  ADR-005-template-responses-no-llm.md  ADR-006-event-bus-sync-snapshot.md  ADR-007-cpu-only-platform.md  README.md
docs/api/: cognition.md  core.md  encoders.md  index.md  logging.md  memory.md  output.md  perception.md
docs/ideas/: ternary+llama.md
docs/layers/: 00_autonomous_loop.md  01_perception_layer.md  02_modality_encoders.md  03_cross_modal_fusion.md  04_memory_system.md  05_cognitive_core.md  06_learning_loop.md  07_output_layer.md  08_attention_resource.md  09_logging_observability.md  10_safety_boundaries.md  11_midbrain_reward.md
docs/planning/: FUTURE_TODO.md  TODO.md  UPDATE_TODO.md
docs/superpowers/specs/: 2026-04-21-autonomy-self-learning-design.md
examples/: demo.py  ingest_material.py
tests/: conftest.py  test_attention_controller.py  test_audio_encoder.py  test_audio_ingestor.py  test_audit_logger.py  test_bm25.py  test_boundary_guard.py  test_brain_logger_claim_events.py  test_brain_logger_integration.py  test_claim_stance_keys.py  test_claim_store.py  test_cli.py  test_cognition.py  test_cognition_integration.py  test_concurrency_stress.py  test_confidence_calibrator.py  test_conflict_detector.py  test_conflict_guard_fast.py  test_conflict_guard_slow.py  test_contracts_hypothesis.py  test_cross_modal_contradiction_detector.py  test_curiosity_engine.py  test_daemon_integration.py  test_e2e_pipeline.py  test_encoder_router.py  test_entity_linker.py  test_file_watcher.py  test_golden.py  test_idle_dispatcher.py  test_knowledge_gap_detector.py  test_learning_integration.py  test_llm_bridge.py  test_llm_budget.py  test_logging.py  test_material_ingestor.py  test_material_registry.py  test_memory.py  test_memory_manager_claims.py  test_metadata_extractor_logging.py  test_motivation_engine.py  (+27 more)
tests/fixtures/conflicts/high_trust/: topology.md
tests/fixtures/conflicts/low_trust/: blog_post.md
tests/fixtures/conflicts/mid_trust_a/: cognitive_basics.md
tests/golden/: questions.json
(+3 files in other folders)
