[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-core"
version = "0.3.0"
description = "Искусственный мультимодальный мозг — когнитивная система с памятью, восприятием и автономным циклом"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "cognitive-core contributors"},
]
keywords = ["ai", "cognitive", "brain", "multimodal", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "jsonlines>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
nlp = [
    "pymorphy3>=1.0.0",
    "razdel>=0.5.0",
    "nltk>=3.8.0",
    "navec>=0.10.0",
    "sentence-transformers>=2.7.0",
]
vision = [
    "open-clip-torch>=2.24.0",
    "pillow>=10.0.0",
]
audio = [
    "openai-whisper>=20231117",
]
docs = [
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
]
all = [
    "cognitive-core[dev,nlp,vision,audio,docs]",
]

[tool.setuptools.packages.find]
include = ["brain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
